--- a/css/estilos_template.css
+++ b/css/estilos_template.css
@@ -237,3 +237,11 @@ ul#socialesFooter div{
 	margin-bottom: 10px;
 	margin-left: 20px;
 }
+
+h2.titulos{
+	text-align: center;
+	font-size: 40px;
+	font-weight: 100;
+	color: rgba(161,193,51,1.00);
+	padding-top: 60px;
+}
