--- a/css/estilos_template.css
+++ b/css/estilos_template.css
@@ -58,7 +58,7 @@ div#centrarContenidos, div#centrarMapa, div#centrarFooter{
 	height: 100%;
 	margin-left: auto;
 	margin-right: auto;
-	background-color: rgba(255,192,203,0.50);
+/*	background-color: rgba(255,192,203,0.50);*/
 	position: relative;
 }
 div#centrarNav img{
